# kierki

./: .gitignore  CMakeLists.txt  Makefile  card.cpp  card.h  client.cpp  client.h  client_auto.cpp  client_auto.h  common_types.h  constants.h  game_rules.cpp  game_rules.h  io_worker.cpp  io_worker.h  io_worker_client.cpp  io_worker_client.h  io_worker_connect.cpp  io_worker_connect.h  io_worker_handler.cpp  io_worker_handler.h  io_worker_mgr.cpp  io_worker_mgr.h  io_worker_player_proxy.cpp  io_worker_player_proxy.h  job_queue.cpp  job_queue.h  kierki-client.cpp  kierki-server.cpp  logger.cpp  logger.h  main.cpp  message.cpp  message.h  network_msg_parser.cpp  network_msg_parser.h  player.cpp  player.h  player_auto.cpp  player_auto.h  (+11 more)
client/: client.cpp  client.h  kierki-client.cpp  player.cpp  player.h  player_auto.cpp  player_auto.h  player_console.cpp  player_console.h  strategy.cpp  strategy.h
common/: card.cpp  card.h  common_types.h  constants.h  logger.cpp  logger.h  message.cpp  message.h  network_msg_parser.cpp  network_msg_parser.h  send_job.cpp  send_job.h  utils.cpp  utils.h
scenarios/: simple.scn  whole_game.scn
server/: game_rules.cpp  game_rules.h  io_worker.cpp  io_worker.h  io_worker_connect.cpp  io_worker_connect.h  io_worker_handler.cpp  io_worker_handler.h  io_worker_mgr.cpp  io_worker_mgr.h  job_queue.cpp  job_queue.h  kierki-server.cpp  server.cpp  server.h
